--- a/html/alphabet.html
+++ b/html/alphabet.html
@@ -2,22 +2,23 @@
 <html lang="ru">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
     <title>TUV.WORLD - Словарь</title>
-    <link rel="stylesheet" href="style/styles.css" />
+    <link rel="stylesheet" href="../style/styles.css" />
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="logo">TUV.WORLD</a>
+        <a href="../index.html" class="logo">TUV.WORLD</a>
         <div class="nav-links">
-            <a href="index.html">Главная</a>
+            <a href="../index.html">Главная</a>
             <a href="alphabet.html">Cловарь</a>
             <a href="media.html">Медиа</a>
-            <a href="upra.html">Упражнения (дети) </a>
+            <a href="upra.html">Упражнения (дети)</a>
         </div>
     </nav>
 
     <section class="hero">
-        <img src="media\главная1.webp" alt="TUV.WORLD" />
+        <img src="../media/главная1.webp" alt="TUV.WORLD" />
         <h1>TUV.WORLD</h1>
     </section>
 
