--- a/html/upra.html
+++ b/html/upra.html
@@ -314,9 +314,9 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="logo">TUV.WORLD</a>
+        <a href="../index.html" class="logo">TUV.WORLD</a>
         <div class="nav-links">
-            <a href="index.html">Главная</a>
+            <a href="../index.html">Главная</a>
             <a href="alphabet.html">Cловарь</a>
             <a href="media.html">Медиа</a>
             <a href="upra.html">Упражнения (дети)</a>
@@ -324,7 +324,7 @@
     </nav>
 
     <section class="hero">
-        <img src="media\главная1.webp" alt="TUV.WORLD" />
+        <img src="../media/главная1.webp" alt="TUV.WORLD" />
         <h1>Викторина для детей</h1>
     </section>
 
@@ -357,9 +357,9 @@
             {
                 question: "Что объединяет эти картинки?",
                 images: [
-                    "media/кажаа1.jfif",
-                    "media/кажаа2.jfif",
-                    "media/кажаа3.jfif"
+                    "../media/кажаа1.jfif",
+                    "../media/кажаа2.jfif",
+                    "../media/кажаа3.jfif"
                 ],
                 answer: "кажаа",
                 hint: "Это то, куда загоняют скот"
@@ -367,9 +367,9 @@
             {
                 question: "Какое слово здесь загадано?",
                 images: [
-                    "media/деспи1.jfif",
-                    "media/деспи2.jfif",
-                    "media/деспи3.jfif"
+                    "../media/деспи1.jfif",
+                    "../media/деспи2.jfif",
+                    "../media/деспи3.jfif"
                 ],
                 answer: "деспи",
                 hint: "Туда кладут изиг-хан"
@@ -377,9 +377,9 @@
             {
                 question: "Что изображено на фотографиях?",
                 images: [
-                    "media/улугсек1.jfif",
-                    "media/улугсек2.jfif",
-                    "media/улугсек3.jfif"
+                    "../media/улугсек1.jfif",
+                    "../media/улугсек2.jfif",
+                    "../media/улугсек3.jfif"
                 ],
                 answer: "улуг сек",
                 hint: "Знак препинания после предложения"
@@ -387,9 +387,9 @@
             {
                 question: "Угадай общее слово",
                 images: [
-                    "media/шооча1.jfif",
-                    "media/шооча2.jfif",
-                    "media/шооча3.jfif"
+                    "../media/шооча1.jfif",
+                    "../media/шооча2.jfif",
+                    "../media/шооча3.jfif"
                 ],
                 answer: "шооча",
                 hint: "То, чем мы закрываем двери с помощью ключа"
@@ -397,9 +397,9 @@
             {
                 question: "Что это может быть?",
                 images: [
-                    "media/элезин1.jfif",
-                    "media/элезин2.jfif",
-                    "media/элезин3.jfif"
+                    "../media/элезин1.jfif",
+                    "../media/элезин2.jfif",
+                    "../media/элезин3.jfif"
                 ],
                 answer: "элезин",
                 hint: "Из него можно строить замки на пляже"
@@ -407,9 +407,9 @@
             {
                 question: "Какое слово здесь спрятано?",
                 images: [
-                    "media/хир1.jfif",
-                    "media/хир2.jfif",
-                    "media/хир3.jfif"
+                    "../media/хир1.jfif",
+                    "../media/хир2.jfif",
+                    "../media/хир3.jfif"
                 ],
                 answer: "хир",
                 hint: "Грязь, слякоть и неухоженность по-тувински"
@@ -417,9 +417,9 @@
             {
                 question: "Что объединяет эти изображения?",
                 images: [
-                    "media/оваа1.jfif",
-                    "media/оваа2.jfif",
-                    "media/оваа3.jfif"
+                    "../media/оваа1.jfif",
+                    "../media/оваа2.jfif",
+                    "../media/оваа3.jfif"
                 ],
                 answer: "оваа",
                 hint: "Место, где проводят обряды"
@@ -427,9 +427,9 @@
             {
                 question: "Угадай слово",
                 images: [
-                    "media/кыш.jfif",
-                    "media/кыш2.jfif",
-                    "media/кыш3.jfif"
+                    "../media/кыш.jfif",
+                    "../media/кыш2.jfif",
+                    "../media/кыш3.jfif"
                 ],
                 answer: "кыш",
                 hint: "Время года"
@@ -437,9 +437,9 @@
             {
                 question: "Что это?",
                 images: [
-                    "media/демиружук1.jfif",
-                    "media/демиружук2.jfif",
-                    "media/демиружук3.jfif"
+                    "../media/демиружук1.jfif",
+                    "../media/демиружук2.jfif",
+                    "../media/демиружук3.jfif"
                 ],
                 answer: "демир ужук",
                 hint: "То, чем ведут записи в тетради"
@@ -447,9 +447,9 @@
             {
                 question: "Какое общее слово?",
                 images: [
-                    "media/бажын1.jfif",
-                    "media/бажын2.jfif",
-                    "media/бажын3.jfif"
+                    "../media/бажын1.jfif",
+                    "../media/бажын2.jfif",
+                    "../media/бажын3.jfif"
                 ],
                 answer: "бажын",
                 hint: "Место, где мы живем"
