--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </nav>
 
     <section class="hero">
-        <img src="media\главная1.webp" alt="TUV.WORLD" />
+        <img src="media/главная1.webp" alt="TUV.WORLD" />
         <h1>TUV.WORLD</h1>
         <p class="hero-subtitle">Мультимедийная платформа для изучения тувинского языка</p>
     </section>
