--- a/html/media.html
+++ b/html/media.html
@@ -2,23 +2,24 @@
 <html lang="ru">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TUV.WORLD - Медиа</title>
-    <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <title>TUV.WORLD - Словарь</title>
+    <link rel="stylesheet" href="../style/styles.css" />
 </head>
 <body>
     <nav class="navbar">
-        <a href="index.html" class="logo">TUV.WORLD</a>
+        <a href="../index.html" class="logo">TUV.WORLD</a>
         <div class="nav-links">
-            <a href="index.html">Главная</a>
+            <a href="../index.html">Главная</a>
             <a href="alphabet.html">Cловарь</a>
             <a href="media.html">Медиа</a>
-            <a href="upra.html">Упражнения (дети) </a>
+            <a href="upra.html">Упражнения (дети)</a>
         </div>
     </nav>
     <section class="hero">
-        <img src="media\главная1.webp" alt="TUV.WORLD" />
+        <img src="../media/главная1.webp" alt="TUV.WORLD" />
         <h1>TUV.WORLD</h1>
-    </section> 
+    </section>
 
     <section class="media-section">
         <h2>Мультипликационные фильмы на тувинском языке</h2>
