--- a/html/alphabet.html
+++ b/html/alphabet.html
@@ -279,77 +279,56 @@
         // Функция для получения пути к аудиофайлу
         function getAudioSource(word) {
             const audioSources = {
-                "Аа-чаза": "media/аа-чаза.ogg",
-                "Аажок": "media/аажок.ogg",
-                "Аажы-чаң": "media/аажы-чаң.ogg",
-                "Аажылаар": "media/аажылаар.ogg",
-                "Аажылаашкын": "media/аажылаашкын.ogg",
-                "Аазаар": "media/аазаар.ogg",
-                "Аайлажыр": "media/аайлажыр.ogg",
-                "Аал": "media/аал.ogg",
-                "Аалдар": "media/аалдар.ogg",
-                "Үгү": "media/үгү.ogg",
-                "Аң": "media/аң.ogg",
-                "Баарлыг": "media/баарлыг.ogg",
-                "Баг": "media/баг.ogg",
-                "Биеэ": "media/биеэ.ogg",
-                "Бо-ла": "media/бо-ла.ogg",
-                "Доңар": "media/доңар.ogg",
-                "Ёзу-чурум": "media/ёзу-чурум.ogg",
-                "Иви": "media/иви.ogg",
-                "Назын": "media/назын.ogg",
-                "Маадыр": "media/маадыр.ogg",
-                //
-                "Аазадаш": "media/гс1.mp3",
-                "Аазакчы": "media/гс2.mp3",
-                "Аайлаар": "media/гс3.mp3",
-                "Аак-маак": "media/гс4.mp3",
-                "Аалчы": "media/гс5.mp3",
-                "Аас-кежик": "media/гс6.mp3",
-                "Ажал": "media/гс7.mp3",
-                "Албанчы": "media/гс8.mp3",
-                "Анай-кара": "media/гс9.mp3",
-                "Анай-хаак": "media/гс10.mp3",
-                "Баажы": "media/гс11.mp3",
-                "Бадыткал": "media/гс12.mp3",
-                "Балбыгыр": "media/гс13.mp3",
-                "Бодарал": "media/гс14.mp3",
-                "Борбак-ыяш": "media/гс15.mp3",
-                "Буулаар": "media/гс16.mp3",
-                "Дагзыр": "media/гс17.mp3",
-                "Дагылга": "media/гс18.mp3",
-                "Дадывыр": "media/гс19.mp3",
-                "Доозун": "media/гс20.mp3",
-                "Игил": "media/гс21.mp3",
-                "Идегел": "media/гс22.mp3",
-                "Ийис": "media/гс23.mp3",
-                "Илеткел": "media/гс24.mp3",
-                "Имилеме": "media/гс25.mp3",
-                "Имиргей": "media/гс26.mp3",
-                "Кагыш": "media/гс27.mp3",
-                "Камбы": "media/гс28.mp3",
-                "Карачал": "media/гс29.mp3",
-                "Кашпагай": "media/гс30.mp3",
-                "Сургакчылаар": "media/гс31.mp3",
-                "Кожаат": "media/гс32.mp3",
-                "Кожамык": "media/гс33.mp3",
-                "Кожай": "media/гс34.mp3",
-                "Көдээ": "media/гс35.mp3",
-                "Куйгу": "media/гс36.mp3",
-                "Кызыл-хүннээр": "media/гс37.mp3",
-                "Кызырак": "media/гс38.mp3",
-                "Лаа": "media/гс39.mp3",
-                "Саадак": "media/гс40.mp3",
-                "Күдүр": "media/гс41.mp3",
-                "Күзуңгү": "media/гс42.mp3",
-                "Кыдырааш": "media/гс43.mp3",
-                "Мозур": "media/гс44.mp3",
-                "Мүн": "media/гс45.mp3",
-                "Мучугур": "media/гс46.mp3",
-                "Оолчук": "media/гс47.mp3",
-                "Оора": "media/гс48.mp3",
-                "Өлчей": "media/гс49.mp3",
-                "Өндүр": "media/гс50.mp3"
+                "Аазадаш": "../media/гс1.mp3",
+                "Аазакчы": "../media/гс2.mp3",
+                "Аайлаар": "../media/гс3.mp3",
+                "Аак-маак": "../media/гс4.mp3",
+                "Аалчы": "../media/гс5.mp3",
+                "Аас-кежик": "../media/гс6.mp3",
+                "Ажал": "../media/гс7.mp3",
+                "Албанчы": "../media/гс8.mp3",
+                "Анай-кара": "../media/гс9.mp3",
+                "Анай-хаак": "../media/гс10.mp3",
+                "Баажы": "../media/гс11.mp3",
+                "Бадыткал": "../media/гс12.mp3",
+                "Балбыгыр": "../media/гс13.mp3",
+                "Бодарал": "../media/гс14.mp3",
+                "Борбак-ыяш": "../media/гс15.mp3",
+                "Буулаар": "../media/гс16.mp3",
+                "Дагзыр": "../media/гс17.mp3",
+                "Дагылга": "../media/гс18.mp3",
+                "Дадывыр": "../media/гс19.mp3",
+                "Доозун": "../media/гс20.mp3",
+                "Игил": "../media/гс21.mp3",
+                "Идегел": "../media/гс22.mp3",
+                "Ийис": "../media/гс23.mp3",
+                "Илеткел": "../media/гс24.mp3",
+                "Имилеме": "../media/гс25.mp3",
+                "Имиргей": "../media/гс26.mp3",
+                "Кагыш": "../media/гс27.mp3",
+                "Камбы": "../media/гс28.mp3",
+                "Карачал": "../media/гс29.mp3",
+                "Кашпагай": "../media/гс30.mp3",
+                "Сургакчылаар": "../media/гс31.mp3",
+                "Кожаат": "../media/гс32.mp3",
+                "Кожамык": "../media/гс33.mp3",
+                "Кожай": "../media/гс34.mp3",
+                "Көдээ": "../media/гс35.mp3",
+                "Куйгу": "../media/гс36.mp3",
+                "Кызыл-хүннээр": "../media/гс37.mp3",
+                "Кызырак": "../media/гс38.mp3",
+                "Лаа": "../media/гс39.mp3",
+                "Саадак": "../media/гс40.mp3",
+                "Күдүр": "../media/гс41.mp3",
+                "Күзуңгү": "../media/гс42.mp3",
+                "Кыдырааш": "../media/гс43.mp3",
+                "Мозур": "../media/гс44.mp3",
+                "Мүн": "../media/гс45.mp3",
+                "Мучугур": "../media/гс46.mp3",
+                "Оолчук": "../media/гс47.mp3",
+                "Оора": "../media/гс48.mp3",
+                "Өлчей": "../media/гс49.mp3",
+                "Өндүр": "../media/гс50.mp3"
             };
             return audioSources[word/*.toLowerCase()*/] || "";
         }
