--- a/html/media.html
+++ b/html/media.html
@@ -38,13 +38,13 @@
         <h2>Аудио: произношение слов</h2>
         <div class="media-audios">
             <p>Дүүнгү хүн дыка изиг болган.</p>
-            <audio controls src="media\аудио1.ogg"></audio>
+            <audio controls src="../media/аудио1.ogg"></audio>
             <p>"Дуун акымны бажын иштин аайлажыр кылдыр диледим."</p>
-            <audio controls src="media\аудио2.ogg"></audio>
+            <audio controls src="../media/аудио2.ogg"></audio>
             <p>Кежээ үгү көрдум</p>
-            <audio controls src="media\аудио3.ogg"></audio>
+            <audio controls src="../media/аудио3.ogg"></audio>
             <p>Чаш назыннымда Тээлиге дыштаныр чораан мен</p>
-            <audio controls src="media\аудио4.ogg"></audio>
+            <audio controls src="../media/аудио4.ogg"></audio>
         </div>
     </section>
     <footer>
