--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 <div class="team-member">
                     <h4>Соян Айланмаа Мылдыргыновна</h4>
-                    <p>К.ф.н., доцент кафедры русского языка и литературы</p>
+                    <p>К.ф.н., доцент кафедры тувинской филологии и общего языкознания</p>
                 </div>
             </div>
 
@@ -131,3 +131,4 @@
 </body>
 
 </html>
+
